<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginTop="10dp"
              android:layout_margin="5dp"
              tools:context=".view.pertandingan.klasemen.KlasemenFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:layout_margin="5dp">
        <TextView
                android:text="@string/no"
                android:id="@+id/nomorKlasemen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Name"
                android:id="@+id/nameClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Play"
                android:id="@+id/playedClub"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/gf"
                android:id="@+id/gfClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/ga"
                android:id="@+id/gaClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/gd"
                android:id="@+id/gdClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/pts"
                android:id="@+id/ptsClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.mlsdev.animatedrv.AnimatedRecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:animationDuration="400"
            app:layoutAnimation="@anim/layout_animation_from_bottom"
            app:layoutManagerOrientation="vertical"
            app:layoutManagerReverse="false"
            app:layoutManagerType="linear"
            android:id="@+id/rvKlasemen">

    </com.mlsdev.animatedrv.AnimatedRecyclerView>
    <ProgressBar android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:id="@+id/progressKlasemen">

    </ProgressBar>
</LinearLayout>